--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
-subtitle: ''
+title: 探索者的博客
+subtitle: '吴文杰'
 description: ''
 keywords:
 author: John Doe
@@ -94,6 +94,7 @@ ignore:
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
 theme: landscape
+#landscape
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
