--- a/_config.yml
+++ b/_config.yml
@@ -4,10 +4,10 @@
 
 # Site
 title: 流浪的步行者
-subtitle: '吴文杰'
-description: ''
+subtitle: '博客'
+description: '小白博客'
 keywords:
-author: John Doe
+author: 吴文杰
 language: en
 timezone: ''
 
@@ -93,7 +93,7 @@ ignore:
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: landscape
+theme: gal
 #landscape
 
 # Deployment
